force-app/main/default/objects/Account/fields/Accepts_Subcontractors__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Subcontractors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepts Subcontractors</label>
    <type>Checkbox</type>
</CustomField>