force-app/main/default/objects/Account/fields/Account_Manager1__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>