force-app/main/default/objects/Account/fields/Account_manager__c.field-meta.xml
<CustomField>
    <fullName>Account_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager for this Account</description>
    <label>Account manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Label__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Account manager)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>