force-app/main/default/objects/Account/fields/Account_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Name__c</fullName>
    <formula>Account_manager__r.FirstName &amp;&apos; &apos;&amp; Account_manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager Name</label>
    <type>Text</type>
</CustomField>