force-app/main/default/objects/Account/fields/Accreditation_Status__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Status__c</fullName>
    <description>Certifications like JCAHO, CARF, CMS certification</description>
    <label>Accreditation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JCAHO</fullName>
            </value>
            <value>
                <fullName>CARF</fullName>
            </value>
            <value>
                <fullName>CMS certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>