force-app/main/default/objects/Account/fields/Additional_AI_Prompts__c.field-meta.xml
<CustomField>
    <fullName>Additional_AI_Prompts__c</fullName>
    <label>Additional AI Prompts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>