force-app/main/default/objects/Account/fields/Approver_Guide_Sent__c.field-meta.xml
<CustomField>
    <fullName>Approver_Guide_Sent__c</fullName>
    <formula>Client_Approver__r.Approver_Guide_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Guide Sent</label>
    <type>Checkbox</type>
</CustomField>