force-app/main/default/objects/Account/fields/Assigned_RA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_RA__c</fullName>
    <formula>IF(ISBLANK(BillingState), &quot;None&quot;,
IF(CONTAINS(&quot;IL:IN:KS:KY:LA:ME:MD:MA:MI:MN:MS&quot;, BillingState), &quot;Olivia&quot;,
IF(CONTAINS(&quot;MO:MT:NE:NV:NH:NJ:NM:NY:NC:ND:OH:OK&quot;, BillingState), &quot;Tina&quot;,
IF(CONTAINS(&quot;OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:WA:WV:WI:WY&quot;, BillingState), &quot;Alexis&quot;, &quot;Franchesca&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned RA</label>
    <type>Text</type>
</CustomField>