force-app/main/default/objects/Account/fields/ATS__c.field-meta.xml
<CustomField>
    <fullName>ATS__c</fullName>
    <label>ATS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>