force-app/main/default/objects/Account/fields/ATS_Type__c.field-meta.xml
<CustomField>
    <fullName>ATS_Type__c</fullName>
    <label>ATS Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Native</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>