force-app/main/default/objects/Account/fields/BD_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>BD_Amount_Paid__c</fullName>
    <label>BD Amount Paid</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>