force-app/main/default/objects/Account/fields/BD_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>BD_Date_Paid__c</fullName>
    <label>BD Date Paid</label>
    <type>Date</type>
</CustomField>