force-app/main/default/objects/Account/fields/Biz_Dev_Perm_Administration__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Perm_Administration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev Perm Administration</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients1</relationshipName>
    <type>Lookup</type>
</CustomField>