force-app/main/default/objects/Account/fields/Biz_Dev_Perm_Nursing__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Perm_Nursing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev Perm Nursing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients2</relationshipName>
    <type>Lookup</type>
</CustomField>