force-app/main/default/objects/Account/fields/Biz_Dev_Perm_Physician__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Perm_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev Perm Physician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients3</relationshipName>
    <type>Lookup</type>
</CustomField>