force-app/main/default/objects/Account/fields/Biz_Dev_Rep_List__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Rep_List__c</fullName>
    <formula>Biz_Dev_Perm_Administration__r.FirstName &amp;&apos; &apos;&amp; Biz_Dev_Perm_Administration__r.LastName &amp;&apos;,&apos;&amp;
Biz_Dev_Perm_Nursing__r.FirstName  &amp;&apos; &apos;&amp;  Biz_Dev_Perm_Nursing__r.LastName &amp;&apos;,&apos;&amp;
Biz_Dev_Perm_Physician__r.FirstName  &amp;&apos; &apos;&amp;  Biz_Dev_Perm_Physician__r.LastName &amp;&apos;,&apos;&amp;
Biz_Dev_Perm_Therapy__r.FirstName &amp;&apos; &apos;&amp;  Biz_Dev_Perm_Therapy__r.LastName  &amp;&apos;,&apos;&amp;
Biz_Dev_Temp_Administration__r.FirstName &amp;&apos; &apos;&amp; Biz_Dev_Temp_Administration__r.LastName &amp;&apos;,&apos;&amp;
Biz_Dev_Temp_Nursing__r.FirstName &amp;&apos; &apos;&amp;  Biz_Dev_Temp_Nursing__r.LastName  &amp;&apos;,&apos;&amp;
Biz_Dev_Temp_Therapy__r.FirstName  &amp;&apos; &apos;&amp;  Biz_Dev_Temp_Therapy__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biz Dev Rep List</label>
    <type>Text</type>
</CustomField>