force-app/main/default/objects/Account/fields/Biz_Dev_Temp_Nursing__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Temp_Nursing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev Temp Nursing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients6</relationshipName>
    <type>Lookup</type>
</CustomField>