force-app/main/default/objects/Account/fields/Biz_Dev_Temp_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Temp_Therapy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev Temp Therapy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients7</relationshipName>
    <type>Lookup</type>
</CustomField>