force-app/main/default/objects/Account/fields/BrandColor__c.field-meta.xml
<CustomField>
    <fullName>BrandColor__c</fullName>
    <description>Stores the Hex code (e.g., #0056b3) for the primary branding color of the Timesheet PDF.</description>
    <label>Brand Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>