force-app/main/default/objects/Account/fields/BrandColorResource__c.field-meta.xml
<CustomField>
    <fullName>BrandColorResource__c</fullName>
    <description>Stores the name of the CSS Static Resource to use for the Timesheet PDF.</description>
    <label>Brand Color Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>