force-app/main/default/objects/Account/fields/Cancellation_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Guarantee__c</fullName>
    <label>Cancellation Guarantee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>