force-app/main/default/objects/Account/fields/Card_id__c.field-meta.xml
<CustomField>
    <fullName>Card_id__c</fullName>
    <label>Card_id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>