force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Staffing Firm</fullName>
            </value>
            <value>
                <fullName>Recruitment Agency</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Healthcare + finance staffing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>