force-app/main/default/objects/Account/fields/Client_Approver__c.field-meta.xml
<CustomField>
    <fullName>Client_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Label__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clients (Client Approver)</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>