force-app/main/default/objects/Account/fields/Client_Confirmation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Confirmation_Notes__c</fullName>
    <label>Client Confirmation Notes</label>
    <type>TextArea</type>
</CustomField>