force-app/main/default/objects/Account/fields/Client_Offer_Letter__c.field-meta.xml
<CustomField>
    <fullName>Client_Offer_Letter__c</fullName>
    <label>Client Offer Letter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Centra Client Conf</fullName>
            </value>
            <value>
                <fullName>VMS Offer Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>