force-app/main/default/objects/Account/fields/Client_Since__c.field-meta.xml
<CustomField>
    <fullName>Client_Since__c</fullName>
    <label>Client Since</label>
    <type>Date</type>
</CustomField>