force-app/main/default/objects/Account/fields/Compliance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Expiry_Date__c</fullName>
    <description>Expiry date for compliance documentation (Healthcare Specific)</description>
    <label>Compliance Expiry Date</label>
    <type>Date</type>
</CustomField>