force-app/main/default/objects/Account/fields/COVID_Policy__c.field-meta.xml
<CustomField>
    <fullName>COVID_Policy__c</fullName>
    <label>COVID Policy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Must be vaccinated</fullName>
            </value>
            <value>
                <fullName>Must have booster</fullName>
            </value>
            <value>
                <fullName>Accepting Medical Exemptions - Centra Form</fullName>
            </value>
            <value>
                <fullName>Accepting Medical Exemptions - Client Form</fullName>
            </value>
            <value>
                <fullName>Accepting Religious Exemptions - Centra Form</fullName>
            </value>
            <value>
                <fullName>Accepting Religious Exemptions - Client Form</fullName>
            </value>
            <value>
                <fullName>Accepting Declinations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>