force-app/main/default/objects/Account/fields/Credentialing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Notes__c</fullName>
    <label>Credentialing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>