force-app/main/default/objects/Account/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <description>Client credentialing requirements</description>
    <inlineHelpText>Client credentialing requirements</inlineHelpText>
    <label>Credentials</label>
    <type>Url</type>
</CustomField>