force-app/main/default/objects/Account/fields/Credentials_Pack__c.field-meta.xml
<CustomField>
    <fullName>Credentials_Pack__c</fullName>
    <label>Credentials Pack</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA Children Hospital</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>HCA</fullName>
            </value>
            <value>
                <fullName>MCP</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>