force-app/main/default/objects/Account/fields/Date_Dist_List_Sent_to_Ops__c.field-meta.xml
<CustomField>
    <fullName>Date_Dist_List_Sent_to_Ops__c</fullName>
    <label>Date Dist. List Sent to Ops</label>
    <type>Date</type>
</CustomField>