force-app/main/default/objects/Account/fields/Default_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Default_Cost_Center__c</fullName>
    <label>Default Cost Center</label>
    <type>TextArea</type>
</CustomField>