force-app/main/default/objects/Account/fields/Default_Job_Template_s__c.field-meta.xml
<CustomField>
    <fullName>Default_Job_Template_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Job Template/s</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>