force-app/main/default/objects/Account/fields/Discipline_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Discipline_Gross_Margin__c</fullName>
    <label>Discipline &amp; Gross Margin</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>