force-app/main/default/objects/Account/fields/DNP_Nursing_Low_Conversion__c.field-meta.xml
<CustomField>
    <fullName>DNP_Nursing_Low_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNP Nursing - Low Conversion</label>
    <type>Checkbox</type>
</CustomField>