force-app/main/default/objects/Account/fields/Do_Not_Post__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Post__c</fullName>
    <label>Do Not Post</label>
    <length>255</length>
    <type>Text</type>
</CustomField>