force-app/main/default/objects/Account/fields/EFT_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>EFT_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EFT Form Received</label>
    <type>Checkbox</type>
</CustomField>