force-app/main/default/objects/Account/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <label>Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>NASDA</fullName>
            </value>
            <value>
                <fullName>NYSE</fullName>
            </value>
            <value>
                <fullName>TSX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>