force-app/main/default/objects/Account/fields/Existing_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Existing_Agreements__c</fullName>
    <label>Existing Agreements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temp Nursing Agreement</fullName>
            </value>
            <value>
                <fullName>Temp Therapy Agreement</fullName>
            </value>
            <value>
                <fullName>Perm Nursing Agreement</fullName>
            </value>
            <value>
                <fullName>Perm Physician Agreement</fullName>
            </value>
            <value>
                <fullName>Perm Therapy Agreement</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>