force-app/main/default/objects/Account/fields/Existing_Agreements_Text__c.field-meta.xml
<CustomField>
    <fullName>Existing_Agreements_Text__c</fullName>
    <formula>IF(INCLUDES(Existing_Agreements__c,&quot;Temp Nursing Agreement&quot;),&quot;Temp Nursing Agreement;&quot;,null)&amp;
IF(INCLUDES(Existing_Agreements__c,&quot;Temp Therapy Agreement&quot;),&quot;Temp Therapy Agreement;&quot;,null)&amp;
IF(INCLUDES(Existing_Agreements__c,&quot;Perm Nursing Agreement&quot;),&quot;Perm Nursing Agreement;&quot;,null)&amp;
IF(INCLUDES(Existing_Agreements__c,&quot;Perm Therapy Agreement&quot;),&quot;Perm Therapy Agreement;&quot;,null)&amp;
IF(INCLUDES(Existing_Agreements__c,&quot;Perm Physician Agreement&quot;),&quot;Perm Physician Agreement;&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Agreements (Text)</label>
    <type>Text</type>
</CustomField>