force-app/main/default/objects/Account/fields/Extended_School_Year_ESY__c.field-meta.xml
<CustomField>
    <fullName>Extended_School_Year_ESY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended School Year (ESY)</label>
    <type>Checkbox</type>
</CustomField>