force-app/main/default/objects/Account/fields/Extension_Consideration_for_Client__c.field-meta.xml
<CustomField>
    <fullName>Extension_Consideration_for_Client__c</fullName>
    <label>Extension Consideration for Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>