force-app/main/default/objects/Account/fields/Fees_in__c.field-meta.xml
<CustomField>
    <fullName>Fees_in__c</fullName>
    <label>Fees (in %)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>