force-app/main/default/objects/Account/fields/Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>Flat_Fee__c</fullName>
    <label>Flat Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>