force-app/main/default/objects/Account/fields/Follow_Up_Protocol_After_Submission__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Protocol_After_Submission__c</fullName>
    <label>Follow Up Protocol After Submission</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>