force-app/main/default/objects/Account/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <description>If Jobs has no specified address, we can default this as the Job Location</description>
    <label>Geolocation</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>