force-app/main/default/objects/Account/fields/Guarantee_Information__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_Information__c</fullName>
    <label>Guarantee Information</label>
    <type>TextArea</type>
</CustomField>