force-app/main/default/objects/Account/fields/Guaranteed_Hours_Provision__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Hours_Provision__c</fullName>
    <label>Guaranteed Hours Provision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>