force-app/main/default/objects/Account/fields/HIPAA_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>HIPAA_Compliance_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HIPAA compliance confirmation</description>
    <label>HIPAA Compliance Status</label>
    <type>Checkbox</type>
</CustomField>