force-app/main/default/objects/Account/fields/Holiday_Rules__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Rules__c</fullName>
    <label>Holiday Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>