force-app/main/default/objects/Account/fields/Insurance_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier__c</fullName>
    <description>Name of client’s insurance provider (Healthcare Specific)</description>
    <label>Insurance Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>