force-app/main/default/objects/Account/fields/Insurance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiry_Date__c</fullName>
    <description>Expiration date of insurance coverage (Healthcare Specific)</description>
    <label>Insurance Expiry Date</label>
    <type>Date</type>
</CustomField>