force-app/main/default/objects/Account/fields/Insurance_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Number__c</fullName>
    <description>Relevant policy number for liability and coverage (Healthcare Specific)</description>
    <label>Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>