force-app/main/default/objects/Account/fields/Invoice_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address__c</fullName>
    <label>Invoice Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>