force-app/main/default/objects/Account/fields/Invoice_Brand_Colo__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Brand_Colo__c</fullName>
    <label>Invoice Brand Colo</label>
    <length>7</length>
    <type>Text</type>
</CustomField>