force-app/main/default/objects/Account/fields/Invoice_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Logo_URL__c</fullName>
    <label>Invoice Logo URL</label>
    <type>Url</type>
</CustomField>