force-app/main/default/objects/Account/fields/Invoice_Preference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Preference__c</fullName>
    <label>Invoice Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Level</fullName>
            </value>
            <value>
                <fullName>Project Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>