force-app/main/default/objects/Account/fields/Jobs_Website__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Website__c</fullName>
    <label>Jobs Website</label>
    <type>Url</type>
</CustomField>