force-app/main/default/objects/Account/fields/Last_Approved_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Approved_Credit_Check__c</fullName>
    <label>Last Approved Credit Check</label>
    <type>Date</type>
</CustomField>