force-app/main/default/objects/Account/fields/Last_Placement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Placement_Date__c</fullName>
    <label>Last Placement Date</label>
    <type>Date</type>
</CustomField>