force-app/main/default/objects/Account/fields/LogoResource__c.field-meta.xml
<CustomField>
    <fullName>LogoResource__c</fullName>
    <description>Stores the name of the Static Resource icon/image to use for the Timesheet PDF.</description>
    <label>Logo Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>