force-app/main/default/objects/Account/fields/M_I_Pass_Through__c.field-meta.xml
<CustomField>
    <fullName>M_I_Pass_Through__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M&amp;I Pass Through</label>
    <type>Checkbox</type>
</CustomField>