force-app/main/default/objects/Account/fields/Manual_Timesheets__c.field-meta.xml
<CustomField>
    <fullName>Manual_Timesheets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Timesheets</label>
    <type>Checkbox</type>
</CustomField>