force-app/main/default/objects/Account/fields/Mapping_Address__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Address__c</fullName>
    <label>Mapping Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Do Not Map</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>