force-app/main/default/objects/Account/fields/Marketing_Hot_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Hot_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Hot Jobs</label>
    <type>Checkbox</type>
</CustomField>