force-app/main/default/objects/Account/fields/MSP_VMS_Account__c.field-meta.xml
<CustomField>
    <fullName>MSP_VMS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSP/VMS Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>